# email-triage-env

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  email_corpus.py  env.py  graders.py  main.py  models.py  tasks.py
tests/: test_all.py  test_rigor.py
